#164 fix width-stretching of collections in breadcrumbs

--- a/mods/core/css/theme.css
+++ b/mods/core/css/theme.css
@@ -335,7 +335,8 @@
 }
 
 /* normalise inline-table size */
-.notion-page-content .notion-collection_view-block {
+.notion-page-content .notion-collection_view-block[style*=' width'],
+.notion-page-content .notion-collection_view-block[style^='width'] {
   width: 100% !important;
 }
 .notion-page-content
